Fix issues with shape backface visibility in chrome

--- a/src/definitions/modules/shape.less
+++ b/src/definitions/modules/shape.less
@@ -48,7 +48,7 @@
   display: none;
 }
 
-.ui.shape .side > * {
+.ui.shape .side * {
   backface-visibility: visible !important;
 }
 
